WIP: Add coordinate transformation and small fixes to dragonfly machine class

--- a/packages/zoltan2/core/CMakeLists.txt
+++ b/packages/zoltan2/core/CMakeLists.txt
@@ -77,16 +77,22 @@ TRIBITS_ADD_OPTION_AND_DEFINE(
   OFF)
 
 TRIBITS_ADD_OPTION_AND_DEFINE(
+  ${PACKAGE_NAME}_ENABLE_Machine_FatTree
+  ${PACKAGE_NAME_UC}_MACHINE_FATTREE
+  "Enable Cray FatTree Machine representation for task mapping."
+  OFF)
+
+TRIBITS_ADD_OPTION_AND_DEFINE(
   ${PACKAGE_NAME}_ENABLE_Machine_Dragonfly
   ${PACKAGE_NAME_UC}_MACHINE_DRAGONFLY
   "Enable Cray Dragonfly Machine representation for task mapping."
-  OFF) 
+  OFF)
 
 TRIBITS_ADD_OPTION_AND_DEFINE(
   ${PACKAGE_NAME}_ENABLE_Machine_Torus
   ${PACKAGE_NAME_UC}_MACHINE_TORUS
   "Enable Torus Machine representation for task mapping."
-  OFF) 
+  OFF)
 
 TRIBITS_ADD_OPTION_AND_DEFINE(
   ${PACKAGE_NAME}_ENABLE_Experimental
