--- a/packages/zoltan2/test/core/driver/driverinputs/CMakeLists.txt
+++ b/packages/zoltan2/test/core/driver/driverinputs/CMakeLists.txt
@@ -26,6 +26,7 @@ TRIBITS_COPY_FILES_TO_BINARY_DIR(copy_input_files_for_driver
         chacoVwgt2Test.xml    
         chacoEdgeWeightTest.xml
         geometricTest.xml
+        geometricHierTest.xml
         geometricVwgtTest.xml
         geometricVwgt2Test.xml
         Rectilinear.pmgen
