--- a/packages/muelu/research/regionMG/examples/structured/CMakeLists.txt
+++ b/packages/muelu/research/regionMG/examples/structured/CMakeLists.txt
@@ -18,9 +18,11 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
       amg_3dof_rebalance.xml
       coarse_smoother.xml
       structured_1dof.xml
+      structured_linear_1dof_comp.xml
       structured_1dof_3level.xml
       structured_1dof-complex.xml
       structured_linear_1dof.xml
+      structured_linear_R_1dof.xml
       structured_linear_3dof.xml
       structured_unstructured_1dof.xml
       compare_residual_history.py
@@ -160,6 +162,22 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
 
   TRIBITS_ADD_TEST(
     StructuredRegionDriver
+    NAME "Structured_Region_Linear_R_Brick3D_Tpetra"
+    ARGS "--linAlgebra=Tpetra --xml=structured_linear_R_1dof.xml --matrixType=Brick3D --nx=10 --ny=10 --nz=10 --smootherIts=2 --convergence-log=Brick3D_linear_R_1.log"
+    COMM serial mpi
+    NUM_MPI_PROCS 1
+    )
+
+  TRIBITS_ADD_TEST(
+    StructuredRegionDriver
+    NAME "Structured_Region_Linear_R_Brick3D_Tpetra"
+    ARGS "--linAlgebra=Tpetra --xml=structured_linear_R_1dof.xml --matrixType=Brick3D --nx=19 --ny=19 --nz=10 --smootherIts=2 --convergence-log=Brick3D_linear_R_4.log"
+    COMM serial mpi
+    NUM_MPI_PROCS 4
+    )
+
+  TRIBITS_ADD_TEST(
+    StructuredRegionDriver
     NAME "Structured_Unstructured_Laplace3D_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_unstructured_1dof.xml --matrixType=Laplace3D --nx=9 --ny=9 --nz=5 --smootherIts=2 --unstructured={3}"
     COMM serial mpi
@@ -233,6 +251,25 @@ TRIBITS_ADD_TEST(
 	  TEST_1
 	    CMND ${PYTHON_EXECUTABLE}
 	    ARGS compare_residual_history.py gold_files/Elasticity3D_linear_4.log.gold Elasticity3D_linear_4.log 1.0e-12
+	    STANDARD_PASS_OUTPUT
+	  FAIL_FAST
+	  COMM serial mpi
+	  OVERALL_NUM_MPI_PROCS 4
+	  )
+
+  TRIBITS_ADD_ADVANCED_TEST(
+	  Structured_Region_Linear_R_Tpetra_MPI_4_regression
+	  TEST_0
+	    EXEC StructuredRegionDriver
+ 	    ARGS --linAlgebra=Tpetra --xml=structured_linear_1dof_comp.xml --matrixType=Brick3D --nx=19 --ny=19 --nz=10 --smootherIts=2 --convergence-log=Brick3D_linear_4_comp.log
+		NUM_MPI_PROCS 4
+	  TEST_1
+	    EXEC StructuredRegionDriver
+ 	    ARGS --linAlgebra=Tpetra --xml=structured_linear_R_1dof.xml --matrixType=Brick3D --nx=19 --ny=19 --nz=10 --smootherIts=2 --convergence-log=Brick3D_linear_R_4_comp.log
+		NUM_MPI_PROCS 4
+	  TEST_2
+	    CMND ${PYTHON_EXECUTABLE}
+	    ARGS compare_residual_history.py Brick3D_linear_4_comp.log Brick3D_linear_R_4_comp.log 1.0e-12
 	    STANDARD_PASS_OUTPUT
 	  FAIL_FAST
 	  COMM serial mpi
