Amesos2: Add Triangular Solves for SuperLU
    Enable with Amesos2_ENABLE_TRIANGULAR_SOLVES

    Currently must manually add defines:
      KOKKOSKERNELS_ENABLE_TPL_SUPERLU
      KOKKOSKERNELS_ENABLE_SUPERNODAL_SPTRSV

--- a/packages/amesos2/src/CMakeLists.txt
+++ b/packages/amesos2/src/CMakeLists.txt
@@ -331,6 +331,12 @@ IF (${PACKAGE_NAME}_ENABLE_SuperLU)
     Amesos2_Superlu_TypeMap.hpp
     )
 
+IF (${PACKAGE_NAME}_ENABLE_TRIANGULAR_SOLVES)
+  APPEND_SET(HEADERS
+    Amesos2_Superlu_TRSV.hpp
+    )
+ENDIF()
+
   APPEND_SET(SOURCES
     Amesos2_Superlu_TypeMap.cpp
     Amesos2_Superlu.cpp
