--- a/packages/amesos2/CMakeLists.txt
+++ b/packages/amesos2/CMakeLists.txt
@@ -131,6 +131,13 @@ IF(${PACKAGE_NAME}_ENABLE_TRIANGULAR_SOLVES)
       MESSAGE(FATAL_ERROR "You must enable -DKokkosKernels_ENABLE_SUPERNODAL_SPTRSV=ON and -DKokkosKernels_ENABLE_TPL_CHOLMOD=ON for Triangular Solves with Cholmod")
     ENDIF()
   ENDIF()
+  IF(TPL_ENABLE_SuperLU AND ${PACKAGE_NAME}_ENABLE_SuperLU)
+    ASSERT_DEFINED(KokkosKernels_ENABLE_SUPERNODAL_SPTRSV)
+    ASSERT_DEFINED(KokkosKernels_ENABLE_TPL_SUPERLU)
+    IF(NOT KokkosKernels_ENABLE_SUPERNODAL_SPTRSV OR NOT KokkosKernels_ENABLE_TPL_SUPERLU)
+      MESSAGE(FATAL_ERROR "You must enable -DKokkosKernels_ENABLE_SUPERNODAL_SPTRSV=ON and -DKokkosKernels_ENABLE_TPL_SUPERLU=ON for Triangular Solves with SuperLU")
+    ENDIF()
+  ENDIF()
 ENDIF()
 
 ASSERT_DEFINED(TPL_ENABLE_METIS)
