Amesos2: Remove HAVE_AMESOS2_TRIANGULAR_SOLVES
Now availability of triangular solves is automatically determined
from kernels defines.

--- a/packages/amesos2/test/solvers/CMakeLists.txt
+++ b/packages/amesos2/test/solvers/CMakeLists.txt
@@ -68,7 +68,7 @@ IF (${PACKAGE_NAME}_ENABLE_SuperLU)
     COMM serial mpi
     )
 
-  IF (${PACKAGE_NAME}_ENABLE_TRIANGULAR_SOLVES)
+  IF (KokkosKernels_ENABLE_SUPERNODAL_SPTRSV AND KokkosKernels_ENABLE_TPL_SUPERLU)
 
     TRIBITS_COPY_FILES_TO_BINARY_DIR(SolverTestSuperLUTRSVFiles
       SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
@@ -175,7 +175,7 @@ IF (${PACKAGE_NAME}_ENABLE_Cholmod)
     COMM serial mpi
     )
 
-  IF (${PACKAGE_NAME}_ENABLE_TRIANGULAR_SOLVES)
+  IF (KokkosKernels_ENABLE_SUPERNODAL_SPTRSV AND KokkosKernels_ENABLE_TPL_CHOLMOD)
 
     TRIBITS_COPY_FILES_TO_BINARY_DIR(SolverTestCholmodTRSVFiles
       SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
