IOSS: Do not use exodiff if it is not found

--- a/packages/seacas/libraries/ioss/src/main/CMakeLists.txt
+++ b/packages/seacas/libraries/ioss/src/main/CMakeLists.txt
@@ -109,6 +109,7 @@ if (${CMAKE_PROJECT_NAME}_ENABLE_SEACASExodiff)
 	       ../../../../applications/exodiff
 	     )
 
+if (SEACAS_EXODIFF_BINARY)
 TRIBITS_ADD_ADVANCED_TEST(exodus32_to_exodus32
    TEST_0 EXEC io_shell ARGS ${DECOMP_ARG} ${JOIN_ARG} ${CMAKE_CURRENT_SOURCE_DIR}/test/8-block.g 8-block32.g
      NOEXEPREFIX NOEXESUFFIX
@@ -180,6 +181,7 @@ IF (SEACASIoss_ENABLE_THREADSAFE)
     COMM mpi serial
     FINAL_PASS_REGULAR_EXPRESSION
   )
+ENDIF()
 ENDIF()
 ENDIF(${CMAKE_PROJECT_NAME}_ENABLE_SEACASExodiff)
 
