--- a/packages/amesos2/CMakeLists.txt
+++ b/packages/amesos2/CMakeLists.txt
@@ -113,6 +113,12 @@ TRIBITS_ADD_OPTION_AND_DEFINE(${PACKAGE_NAME}_ENABLE_MUMPS
   OFF
 )
 
+TRIBITS_ADD_OPTION_AND_DEFINE(${PACKAGE_NAME}_ENABLE_STRUMPACK
+  HAVE_AMESOS2_STRUMPACK
+  "Enable STRUMPACK in Amesos2"
+  OFF
+)
+
 TRIBITS_ADD_OPTION_AND_DEFINE(${PACKAGE_NAME}_ENABLE_TRIANGULAR_SOLVES
   HAVE_AMESOS2_TRIANGULAR_SOLVES
   "Enable Triangular Solves in Amesos2"
