--- a/packages/rol/test/algorithm/TypeE/CMakeLists.txt
+++ b/packages/rol/test/algorithm/TypeE/CMakeLists.txt
@@ -17,6 +17,15 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   ADD_DIR_TO_NAME
   )
 
+TRIBITS_ADD_EXECUTABLE_AND_TEST(
+  CompositeStep
+  SOURCES test_03.cpp
+  ARGS PrintItAll
+  NUM_MPI_PROCS 1
+  PASS_REGULAR_EXPRESSION "TEST PASSED"
+  ADD_DIR_TO_NAME
+  )
+
 TRIBITS_COPY_FILES_TO_BINARY_DIR(
   TypeETestDataCopy
   SOURCE_FILES
