--- a/packages/intrepid2/unit-test/Projection/Cuda/CMakeLists.txt
+++ b/packages/intrepid2/unit-test/Projection/Cuda/CMakeLists.txt
@@ -45,6 +45,7 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   NUM_MPI_PROCS 1
   PASS_REGULAR_EXPRESSION "TEST PASSED"
   ADD_DIR_TO_NAME
+  RUN_SERIAL 
   )
   
 TRIBITS_ADD_EXECUTABLE_AND_TEST(
@@ -54,6 +55,7 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   NUM_MPI_PROCS 1
   PASS_REGULAR_EXPRESSION "TEST PASSED"
   ADD_DIR_TO_NAME
+  RUN_SERIAL 
   )
   
 TRIBITS_ADD_EXECUTABLE_AND_TEST(
