--- a/packages/shylu/shylu_node/tacho/example/CMakeLists.txt
+++ b/packages/shylu/shylu_node/tacho/example/CMakeLists.txt
@@ -48,8 +48,15 @@ IF (TACHO_HAVE_KOKKOS_TASK)
     COMM serial mpi
   )
   TRIBITS_ADD_EXECUTABLE(
-    Tacho_ExampleCholLevelSet
-    TARGET_DEFINES 
+    Tacho_ExampleCholLevelSetVar0
+    TARGET_DEFINES -DTACHO_USE_TRISOLVE_VARIANT=0
+    NOEXEPREFIX
+    SOURCES Tacho_ExampleCholLevelSet.cpp
+    COMM serial mpi
+  )
+  TRIBITS_ADD_EXECUTABLE(
+    Tacho_ExampleCholLevelSetVar1
+    TARGET_DEFINES -DTACHO_USE_TRISOLVE_VARIANT=1
     NOEXEPREFIX
     SOURCES Tacho_ExampleCholLevelSet.cpp
     COMM serial mpi
