Sacado:  Add configure option to force SFad to init in default constructor
The new design SFad does not directly initialize its data in the default
constructor, but instead uses the default compiler generated
implementation.  This speeds SFad up but has proved to be problematic in
some codes that were assuming SFad always initialized (as was the case
in the old design).  This adds a configure option,
Sacado_SFAD_INIT_DEFAULT_CONSTRUCTOR, to recover the old behavior.  It
defaults to off.

Also add KOKKOS_DEFAULTED_FUNCTION in several places for Cuda 9 and
lower.

--- a/packages/sacado/CMakeLists.txt
+++ b/packages/sacado/CMakeLists.txt
@@ -32,6 +32,13 @@ TRIBITS_ADD_OPTION_AND_DEFINE(
   )
 
 TRIBITS_ADD_OPTION_AND_DEFINE(
+  ${PACKAGE_NAME}_SFAD_INIT_DEFAULT_CONSTRUCTOR
+  SACADO_SFAD_INIT_DEFAULT_CONSTRUCTOR
+  "Force SFad (in the new design) to initialize value and derivative components in the default constructor (adds additional runtime cost, but protects against uninitialized use)."
+  OFF
+  )
+
+TRIBITS_ADD_OPTION_AND_DEFINE(
   ${PACKAGE_NAME}_ENABLE_HIERARCHICAL
   SACADO_VIEW_CUDA_HIERARCHICAL
   "Enable hierarchical parallelism (currently only for CUDA)."
