Intrepid2: RUN_SERIAL Cuda InterpolationProjection
On RIDE PR testing, these are in danger of timing out (taking 8-9
minutes, where the limit is 10 minutes).

--- a/packages/intrepid2/unit-test/Projection/Cuda/CMakeLists.txt
+++ b/packages/intrepid2/unit-test/Projection/Cuda/CMakeLists.txt
@@ -5,6 +5,7 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   NUM_MPI_PROCS 1
   PASS_REGULAR_EXPRESSION "TEST PASSED"
   ADD_DIR_TO_NAME
+  RUN_SERIAL
   )
 
 TRIBITS_ADD_EXECUTABLE_AND_TEST(
@@ -14,6 +15,7 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   NUM_MPI_PROCS 1
   PASS_REGULAR_EXPRESSION "TEST PASSED"
   ADD_DIR_TO_NAME
+  RUN_SERIAL
   )
     
 TRIBITS_ADD_EXECUTABLE_AND_TEST(
@@ -23,6 +25,7 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   NUM_MPI_PROCS 1
   PASS_REGULAR_EXPRESSION "TEST PASSED"
   ADD_DIR_TO_NAME
+  RUN_SERIAL
   )
   
 TRIBITS_ADD_EXECUTABLE_AND_TEST(
@@ -32,6 +35,7 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   NUM_MPI_PROCS 1
   PASS_REGULAR_EXPRESSION "TEST PASSED"
   ADD_DIR_TO_NAME
+  RUN_SERIAL
   )
   
 TRIBITS_ADD_EXECUTABLE_AND_TEST(
