--- a/packages/intrepid2/unit-test/Projection/Cuda/CMakeLists.txt
+++ b/packages/intrepid2/unit-test/Projection/Cuda/CMakeLists.txt
@@ -25,6 +25,7 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   NUM_MPI_PROCS 1
   PASS_REGULAR_EXPRESSION "TEST PASSED"
   ADD_DIR_TO_NAME
+  RUN_SERIAL
   )
   
 TRIBITS_ADD_EXECUTABLE_AND_TEST(
@@ -34,6 +35,7 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   NUM_MPI_PROCS 1
   PASS_REGULAR_EXPRESSION "TEST PASSED"
   ADD_DIR_TO_NAME
+  RUN_SERIAL
   )
   
 TRIBITS_ADD_EXECUTABLE_AND_TEST(
