Initial implementation of build stats wrappers and summary (#7376)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,8 @@ SET(${PROJECT_NAME}_EXCLUDE_DISABLED_SUBPACKAGES_FROM_DISTRIBUTION_DEFAULT FALSE
 # Do all of the processing for this Tribits project
 TRIBITS_PROJECT()
 
+INSTALL_BUILD_STATS_SCRIPTS()
+
 # Install TriBITS so that other projects can use it.
 ADVANCED_SET(${PROJECT_NAME}_INSTALL_TriBITS ON CACHE BOOL
   "If ture, install TriBITS into <lib-install-dir>/cmake/tribits/")
