--- a/packages/seacas/libraries/ioss/src/utest/CMakeLists.txt
+++ b/packages/seacas/libraries/ioss/src/utest/CMakeLists.txt
@@ -29,6 +29,7 @@ TRIBITS_ADD_EXECUTABLE(
 TRIBITS_ADD_TEST(
         Utst_blob_write_read
 	NAME Utst_blob_write_read
+	NUM_MPI_PROCS 1
   )
 
 TRIBITS_ADD_EXECUTABLE(
