--- a/cmake/std/atdm/test/unit_tests/CMakeLists.txt
+++ b/cmake/std/atdm/test/unit_tests/CMakeLists.txt
@@ -25,3 +25,25 @@ TRIBITS_ADD_ADVANCED_TEST( set_build_options_unit_tests
     PASS_REGULAR_EXPRESSION_ALL "Ran 13 test" "[^]OK[$]"
     ALWAYS_FAIL_ON_NONZERO_RETURN
   )
+
+TRIBITS_ADD_ADVANCED_TEST( atdm_config_helper_funcs_unit_tests
+OVERALL_WORKING_DIRECTORY TEST_NAME
+OVERALL_NUM_MPI_PROCS 1
+TEST_0 CMND env
+  ARGS SHUNIT_COLOR=none ${CMAKE_CURRENT_SOURCE_DIR}/atdm_config_helper_funcs_unit_test.sh
+  PASS_REGULAR_EXPRESSION_ALL
+    "Ran 1 test"
+    "[^]OK[$]"
+  ALWAYS_FAIL_ON_NONZERO_RETURN
+)
+
+TRIBITS_ADD_ADVANCED_TEST( get_known_system_info_unit_tests
+OVERALL_WORKING_DIRECTORY TEST_NAME
+OVERALL_NUM_MPI_PROCS 1
+TEST_0 CMND env
+  ARGS SHUNIT_COLOR=none ${CMAKE_CURRENT_SOURCE_DIR}/get_known_system_info_unit_test.sh
+  PASS_REGULAR_EXPRESSION_ALL
+    "Ran 1 test"
+    "[^]OK[$]"
+  ALWAYS_FAIL_ON_NONZERO_RETURN
+)
