--- a/packages/shylu/shylu_dd/frosch/test/Thyra_Xpetra_Elasticity/CMakeLists.txt
+++ b/packages/shylu/shylu_dd/frosch/test/Thyra_Xpetra_Elasticity/CMakeLists.txt
@@ -202,6 +202,24 @@ COMM mpi
 NUM_MPI_PROCS 8
 )
 
+IF(HAVE_SHYLU_DDFROSCH_ZOLTAN2)
+TRIBITS_ADD_TEST(
+thyra_xpetra_elasticity
+NAME test_thyra_xpetra_elasticity_TLP_GDSW_ML_DIM2_TPETRA
+ARGS "--M=3 --DIM=2 --O=1 --PLIST=ParameterLists/ParameterList_TwoLevelPreconditioner_GDSW_ML.xml --USETPETRA"
+COMM mpi
+NUM_MPI_PROCS 4
+)
+
+TRIBITS_ADD_TEST(
+thyra_xpetra_elasticity
+NAME test_thyra_xpetra_elasticity_TLP_GDSW_ML_DIM3_TPETRA
+ARGS "--M=3 --DIM=3 --O=1 --PLIST=ParameterLists/ParameterList_TwoLevelPreconditioner_GDSW_ML3.xml --USETPETRA"
+COMM mpi
+NUM_MPI_PROCS 8
+)
+ENDIF()
+
 ################################################
 # TwoLevelPreconditioner_IPOUHarmonic_GDSWStar #
 ################################################
@@ -279,3 +297,21 @@ ARGS "--M=3 --DIM=3 --O=1 --PLIST=ParameterLists/ParameterList_TwoLevelPrecondit
 COMM mpi
 NUM_MPI_PROCS 8
 )
+
+IF(HAVE_SHYLU_DDFROSCH_ZOLTAN2)
+TRIBITS_ADD_TEST(
+thyra_xpetra_elasticity
+NAME test_thyra_xpetra_elasticity_TLP_RGDSW_ML_DIM2_TPETRA
+ARGS "--M=3 --DIM=2 --O=1 --PLIST=ParameterLists/ParameterList_TwoLevelPreconditioner_RGDSW_ML.xml --USETPETRA"
+COMM mpi
+NUM_MPI_PROCS 4
+)
+
+TRIBITS_ADD_TEST(
+thyra_xpetra_elasticity
+NAME test_thyra_xpetra_elasticity_TLP_RGDSW_ML_DIM3_TPETRA
+ARGS "--M=3 --DIM=3 --O=1 --PLIST=ParameterLists/ParameterList_TwoLevelPreconditioner_RGDSW_ML3.xml --USETPETRA"
+COMM mpi
+NUM_MPI_PROCS 8
+)
+ENDIF()
