--- a/packages/shylu/shylu_dd/frosch/test/Thyra_Xpetra_Laplace/CMakeLists.txt
+++ b/packages/shylu/shylu_dd/frosch/test/Thyra_Xpetra_Laplace/CMakeLists.txt
@@ -315,6 +315,17 @@ NUM_MPI_PROCS 4
 #  )
 #ENDIF() # IF(ShyLU_DDFROSch_ENABLE_MueLu)
 
+IF(HAVE_SHYLU_DDFROSCH_ZOLTAN2)
+TRIBITS_ADD_TEST(
+thyra_xpetra_laplace
+NAME test_thyra_xpetra_laplace_TLP_GDSW_DIM2_DPN2_ORD0_TPETRA
+ARGS "--M=3 --DIM=2 --O=1 --NB=1 --DPN=1 --ORD=0 --PLIST=ParameterLists/ParameterList_TwoLevelPreconditioner_GDSW_ML.xml --USETPETRA"
+COMM mpi
+NUM_MPI_PROCS 4
+)
+ENDIF()
+
+
 TRIBITS_ADD_TEST(
 thyra_xpetra_laplace
 NAME test_thyra_xpetra_laplace_TLP_GDSW_DIM3_DPN1_ORD0_TPETRA
