Fix Cmake files to get Zoltan2_config.h

--- a/packages/zoltan2/core/CMakeLists.txt
+++ b/packages/zoltan2/core/CMakeLists.txt
@@ -178,4 +178,4 @@ ADD_SUBDIRECTORY(src)
 TRIBITS_PACKAGE_POSTPROCESS()
 
 # We keep the name of this header file the same as before. 
-CONFIGURE_FILE(cmake/Zoltan2Core_config.h.in src/Zoltan2_config.h @ONLY)
+# TRIBITS_CONFIGURE_FILE(Zoltan2_config.h)
