--- a/packages/rol/example/CMakeLists.txt
+++ b/packages/rol/example/CMakeLists.txt
@@ -20,6 +20,7 @@ ADD_SUBDIRECTORY(paraboloid-circle)
 ADD_SUBDIRECTORY(putting)
 ADD_SUBDIRECTORY(PinT)
 ADD_SUBDIRECTORY(dense-hessian)
+ADD_SUBDIRECTORY(shardes)
 
 
 IF(${PACKAGE_NAME}_ENABLE_Sacado)
