--- a/packages/rol/example/PDE-OPT/binary/elasticity/CMakeLists.txt
+++ b/packages/rol/example/PDE-OPT/binary/elasticity/CMakeLists.txt
@@ -16,6 +16,7 @@ IF(${PROJECT_NAME}_ENABLE_Intrepid AND
   # Need ROL/PEBBL interface
   INCLUDE_DIRECTORIES(${${PACKAGE_NAME}_SOURCE_DIR}/adapters/pebbl/src/algorithm)
   INCLUDE_DIRECTORIES(${${PACKAGE_NAME}_SOURCE_DIR}/adapters/pebbl/src/function)
+  INCLUDE_DIRECTORIES(${${PACKAGE_NAME}_SOURCE_DIR}/adapters/pebbl/src/vector)
 
   TRIBITS_ADD_EXECUTABLE(
     example_01
