--- a/packages/shylu/shylu_node/tacho/src/CMakeLists.txt
+++ b/packages/shylu/shylu_node/tacho/src/CMakeLists.txt
@@ -43,6 +43,7 @@ APPEND_SET(SOURCES
   impl/Tacho_Util.cpp
   impl/Tacho_Blas_External.cpp
   impl/Tacho_Lapack_External.cpp
+  impl/Tacho_GraphTools_Metis.cpp
   eti/Tacho_Solver_ETI_ChseLevTaskScheduler_complex_double_Cuda.cpp
   eti/Tacho_Solver_ETI_ChseLevTaskScheduler_complex_double_OpenMP.cpp
   eti/Tacho_Solver_ETI_ChseLevTaskScheduler_complex_double_Serial.cpp
