Tacho - add a feature for using a condensed graph

--- a/packages/shylu/shylu_node/tacho/example/CMakeLists.txt
+++ b/packages/shylu/shylu_node/tacho/example/CMakeLists.txt
@@ -8,13 +8,6 @@ FILE(GLOB SOURCES *.cpp)
 
 SET(LIBRARIES tacho)
 
-TRIBITS_ADD_EXECUTABLE(
-  Tacho_ExampleCondensedGraph
-  NOEXEPREFIX
-  SOURCES Tacho_ExampleCondensedGraph.cpp
-  COMM serial mpi
-)
-
 IF (TACHO_HAVE_KOKKOS_TASK)
   #
   # Supernodes
@@ -206,7 +199,7 @@ IF (TACHO_HAVE_KOKKOS_TASK)
   ENDIF()
 
   TRIBITS_COPY_FILES_TO_BINARY_DIR(Tacho_SimpleSparseTest_File
-          SOURCE_FILES test.mtx condensed_graph.dat condensed_weight.dat crs_graph.dat crs_values.dat
+          SOURCE_FILES test.mtx graph.dat weight.dat graph_test.mtx 
           SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
           DEST_DIR ${CMAKE_CURRENT_BINARY_DIR}
   )
