--- a/packages/amesos2/test/solvers/CMakeLists.txt
+++ b/packages/amesos2/test/solvers/CMakeLists.txt
@@ -178,7 +178,7 @@ IF (${PACKAGE_NAME}_ENABLE_Cholmod)
 
   TRIBITS_COPY_FILES_TO_BINARY_DIR(SolverTestCholmodFiles
     SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
-    SOURCE_FILES cholmod_test.xml
+    SOURCE_FILES cholmod_test.xml cholmod_int_test.xml
     EXEDEPS Solver_Test
     )
 
@@ -186,6 +186,15 @@ IF (${PACKAGE_NAME}_ENABLE_Cholmod)
     Solver_Test
     NAME Cholmod_Solver_Test
     ARGS "--xml-params=cholmod_test.xml --filedir=${CMAKE_CURRENT_BINARY_DIR}/../matrices/ --multiple-solves --refactor"
+    STANDARD_PASS_OUTPUT
+    NUM_MPI_PROCS 1
+    COMM serial mpi
+    )
+
+  TRIBITS_ADD_TEST(
+    Solver_Test
+    NAME Cholmod_Int_Solver_Test
+    ARGS "--xml-params=cholmod_int_test.xml --filedir=${CMAKE_CURRENT_BINARY_DIR}/../matrices/ --multiple-solves --refactor"
     STANDARD_PASS_OUTPUT
     NUM_MPI_PROCS 1
     COMM serial mpi
