Sacado:  Rename gtest target to not conflict with Trilinos' target.

--- a/packages/sacado/test/GTestSuite/CMakeLists.txt
+++ b/packages/sacado/test/GTestSuite/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Set some variables controlling the internal googletest package
 SET(INSTALL_GTEST OFF CACHE BOOL "Install GTest")
+SET(BUILD_GMOCK OFF CACHE BOOL "Build GMock")
 SET(gtest_disable_pthreads ON CACHE BOOL "Disable uses of pthreads in gtest")
 
 # Configure googletest
@@ -50,4 +51,4 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   PASS_REGULAR_EXPRESSION "PASSED"
   )
 
-TARGET_LINK_LIBRARIES(Sacado_GTestSuite gtest)
+TARGET_LINK_LIBRARIES(Sacado_GTestSuite sacado-gtest)
