--- a/packages/sacado/test/GTestSuite/googletest/googletest/CMakeLists.txt
+++ b/packages/sacado/test/GTestSuite/googletest/googletest/CMakeLists.txt
@@ -125,27 +125,27 @@ include_directories(${gtest_build_include_dirs})
 # Google Test libraries.  We build them using more strict warnings than what
 # are used for other targets, to ensure that gtest can be compiled by a user
 # aggressive about warnings.
-cxx_library(gtest "${cxx_strict}" src/gtest-all.cc)
-set_target_properties(gtest PROPERTIES VERSION ${GOOGLETEST_VERSION})
+cxx_library(sacado-gtest "${cxx_strict}" src/gtest-all.cc)
+set_target_properties(sacado-gtest PROPERTIES VERSION ${GOOGLETEST_VERSION})
 cxx_library(gtest_main "${cxx_strict}" src/gtest_main.cc)
 set_target_properties(gtest_main PROPERTIES VERSION ${GOOGLETEST_VERSION})
 # If the CMake version supports it, attach header directory information
 # to the targets for when we are part of a parent build (ie being pulled
 # in via add_subdirectory() rather than being a standalone build).
 if (DEFINED CMAKE_VERSION AND NOT "${CMAKE_VERSION}" VERSION_LESS "2.8.11")
-  target_include_directories(gtest SYSTEM INTERFACE
+  target_include_directories(sacado-gtest SYSTEM INTERFACE
     "$<BUILD_INTERFACE:${gtest_build_include_dirs}>"
     "$<INSTALL_INTERFACE:$<INSTALL_PREFIX>/${CMAKE_INSTALL_INCLUDEDIR}>")
   target_include_directories(gtest_main SYSTEM INTERFACE
     "$<BUILD_INTERFACE:${gtest_build_include_dirs}>"
     "$<INSTALL_INTERFACE:$<INSTALL_PREFIX>/${CMAKE_INSTALL_INCLUDEDIR}>")
 endif()
-target_link_libraries(gtest_main PUBLIC gtest)
+target_link_libraries(gtest_main PUBLIC sacado-gtest)
 
 ########################################################################
 #
 # Install rules
-install_project(gtest gtest_main)
+install_project(sacado-gtest gtest_main)
 
 ########################################################################
 #
