Add driver for Tpetra/Epetra SpMV performance comparison

--- a/packages/muelu/test/scaling/CMakeLists.txt
+++ b/packages/muelu/test/scaling/CMakeLists.txt
@@ -437,6 +437,32 @@ IF (${PACKAGE_NAME}_HAVE_TPETRA_SOLVER_STACK)
 
 ENDIF()
 
+IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Epetra)
+  TRIBITS_ADD_EXECUTABLE(
+    SpMVPerformance
+    SOURCES SpMVPerformance.cpp
+    COMM mpi
+    CATEGORIES PERFORMANCE
+    )
+
+  TRIBITS_ADD_TEST(
+    SpMVPerformance
+    COMM mpi
+    NUM_MPI_PROCS 1
+    PASS_REGULAR_EXPRESSION "Complete"
+    RUN_SERIAL
+    CATEGORIES PERFORMANCE
+  )
+
+  TRIBITS_ADD_TEST(
+    SpMVPerformance
+    COMM mpi
+    NUM_MPI_PROCS 4
+    PASS_REGULAR_EXPRESSION "Complete"
+    RUN_SERIAL
+    CATEGORIES PERFORMANCE
+  )
+ENDIF()
 
 # Driver to evaluate low level Matrix Matrix multiply kernels potentially using different TPLs
 # This differs from the existing Matrix Matrix driver that forms parallel random matrices for testing
