--- a/packages/sacado/test/CMakeLists.txt
+++ b/packages/sacado/test/CMakeLists.txt
@@ -1,4 +1,6 @@
-ADD_SUBDIRECTORY(GTestSuite)
+IF (Sacado_ENABLE_GTest)
+  ADD_SUBDIRECTORY(GTestSuite)
+ENDIF()
 ADD_SUBDIRECTORY(UnitTests)
 ADD_SUBDIRECTORY(tradoptest)
 ADD_SUBDIRECTORY(performance)
